--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Swip Image</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Swipe Image</string>
+    <string name="image_load_error">Faied to load images</string>
+    <string name="please_wait">Please wait...</string>
 </resources>
